# mcp-rs-spectrum-analyzer

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  index.md  tools.md  usage.md
src/rs_spectrum_analyzer_mcp/: __init__.py  __main__.py  config.py  limits.py  server.py  state.py  tools.py
src/rs_spectrum_analyzer_mcp/driver/: __init__.py  exceptions.py  sa_driver.py  scpi_socket.py
src/rs_spectrum_analyzer_mcp/models/: __init__.py  sa_types.py
src/rs_spectrum_analyzer_mcp/safety/: __init__.py  validators.py
src/rs_spectrum_analyzer_mcp/templates/: __init__.py  aclr.py  base.py  channel_power.py  harmonics.py  spurious.py
src/spectrum_analyzer_mcp/: __init__.py  __main__.py  config.py  exceptions.py  server.py  state.py
src/spectrum_analyzer_mcp/driver/: __init__.py  exceptions.py  factory.py  sa_driver.py  scpi_dialect.py  scpi_socket.py
src/spectrum_analyzer_mcp/models/: __init__.py  sa_types.py
src/spectrum_analyzer_mcp/safety/: validators.py
src/spectrum_analyzer_mcp/templates/: emi.py  harmonics.py  obw.py
src/spectrum_analyzer_mcp/tools/: __init__.py  _connection.py  _registry.py  amplitude.py  bandwidth.py  connection.py  export.py  frequency.py  limits_tools.py  markers.py  measurements.py  scpi.py  state_tools.py  sweep.py  system.py  templates_tools.py  trace.py
src/spectrum_analyzer_mcp/transport/: __init__.py  base.py  factory.py  tcp_socket.py  visa.py
tests/: conftest.py  test_config.py  test_driver.py  test_exceptions.py  test_limits.py  test_models.py  test_safety.py  test_security.py  test_server.py  test_state.py  test_templates.py  test_tools.py
